[tool.poetry]
name = "curve-simulation"
version = "0.1.0"
description = ""
authors = ["gregshestakov <gregshestakov@gmail.com >"]
license = "GNU 3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.13.0"
web3 = "^5.31.1"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
AST = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
